# bulletin_board_system

./: .gitignore  manage.py  postgres  pyproject.toml  utils.py
ads/: admin.py  urls.py
ads/locale/ru/LC_MESSAGES/: django.po
ads/migrations/: 0001_initial.py
ads/models/: __init__.py  ad.py  category.py  location.py  user.py
ads/serializers/: __init__.py  ad.py  category.py  location.py  user.py
ads/views/: __init__.py  ad.py  category.py  user.py
backup_db/: backup_ads_db.sql
bulletin_board_system/: asgi.py  settings.py  urls.py  wsgi.py
fixtures/: ads.json  categories.json  locations.json  users.json
locale/ru/LC_MESSAGES/: django.po
