[tool.poetry]
name = "bulletin-board-system"
version = "0.1.0"
description = ""
authors = ["Sergey Borodin <bsy.prog@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bulletin_board_system"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.3"
pillow = "^9.3.0"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
